Fatta Navbar superiore

--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -6,4 +6,6 @@
     background-color: $secondary_color;
     border-radius: 20px;
     padding: 1rem 2rem;
+    text-transform: uppercase;
+    text-align: center;
 }
