--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -3,6 +3,9 @@
 @import '~@fontsource/roboto/700.css';
 @import '~@fortawesome/fontawesome-free/css/all.css';
 
+body{
+    font-family: 'Roboto', sans-serif;
+}
 ul{
     list-style-type: none;
 }
