--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -4,7 +4,7 @@
 @mixin page_btn {
     color: white;
     background-color: $secondary_color;
-    border-radius: 20px;
+    border-radius: 50rem;
     padding: 1rem 2rem;
     text-transform: uppercase;
     text-align: center;
