Rifatto tutto da capo fino al banner 2 (bootstrap)

--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -5,7 +5,8 @@
     color: white;
     background-color: $secondary_color;
     border-radius: 50rem;
-    padding: 1rem 2rem;
+    padding: .5rem 1rem;
     text-transform: uppercase;
     text-align: center;
+    font-size: 12px;
 }
