Impostato il layout per 1920px, fixato il tutto

--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -2,3 +2,6 @@
 $primary_color: #292629;
 $secondary_color: #1a5eca;
 $tertiary_color: #97a9ba;
+
+/* Padding asse x minimo della pagina */
+$min_padding_x: 100px;
