--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -1,11 +1,11 @@
 @import './variables.scss';
 
-/* Buttons (da sistemare meglio) */
+/* Buttons */
 @mixin page_btn {
     color: white;
     background-color: $secondary_color;
     border-radius: 50rem;
-    padding: 1rem 2rem;
+    padding: .8rem 2rem;
     text-transform: uppercase;
     text-align: center;
     font-size: 15px;
